hard-code stage.tb.pro for design review

--- a/sites/common/includes/base/calamity-bar.html
+++ b/sites/common/includes/base/calamity-bar.html
@@ -1,7 +1,7 @@
 <div id="calamity-bar">
   <div class="calamity-bar-tabs">
     <a href="https://www.thunderbird.net">Thunderbird</a>
-    <a href="https://www.tb.pro" class="active">Thunderbird Pro</a>
+    <a href="https://stage.tb.pro" class="active">Thunderbird Pro</a>
   </div>
 </div>
 
