Style calamity bar so that width/alignment matches top bar

--- a/assets/less/common/calamity-bar.less
+++ b/assets/less/common/calamity-bar.less
@@ -3,10 +3,16 @@
 @color-nav: rgba(255, 255, 255, 0.6);
 @color-active: #58c9ff;
 
-
 #calamity-bar {
     background-color: @bg-bar;
+    display: flex;
     height: 2rem;
+    justify-content: center;
+    width: 100%;
+
+    @media (min-width: @md) {
+        padding-inline: calc(@space-144 - @gutter);
+    }
 }
 
 .calamity-bar-tabs {
@@ -14,17 +20,20 @@
     flex-direction: row;
     gap: 0;
     height: 100%;
+    margin-left: 1rem;
+    max-width: @lg;
+    width: 100%;
 
-    @media (min-width: @lg) {
-        padding-left: 118px;
+    @media (min-width: @md) {
+        margin-left: 0;
     }
 
     a {
-        display: flex;
         align-items: center;
+        color: @color-nav;
+        display: flex;
         padding-block: auto;
         padding-inline: 20px;
-        color: @color-nav;
         text-decoration: none;
     }
 
