--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -41,3 +41,11 @@
 // Appeal Page imports - These should be split off into their own bundles at some point
 @import "./pages/survey.less";
 @import "./pages/beta-appeal-24.less";
+
+
+// Components shared with tb.pro
+
+// Copy-paste to avoid importing all tb.pro styles
+@import "./common/space.less";
+@import "./common/calamity-bar.less";
+@import "./common/shared-footer.less";
