Create shared tb/tbpro components (#943)
* Sites can opt-in to includes that are common to multiple sites

* Moves footer to shared location

* Reload dev server when file in common searchpath is updated

* Include shared footer and calamity bar on tb.pro landing page

* Remove unused less file

* populate footer with links and translation blocks

* hard-code stage.tb.pro for design review

* Style calamity bar so that width/alignment matches top bar

* Move white space definitions to own file

* add shared footer to thunderbird.net

* Remove stale comment

--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -41,3 +41,9 @@
 // Appeal Page imports - These should be split off into their own bundles at some point
 @import "./pages/survey.less";
 @import "./pages/beta-appeal-24.less";
+
+
+// Components shared with tb.pro
+@import "./common/space.less";
+@import "./common/calamity-bar.less";
+@import "./common/shared-footer.less";
