--- a/sites/www.thunderbird.net/includes/base/base.html
+++ b/sites/www.thunderbird.net/includes/base/base.html
@@ -63,10 +63,9 @@
     {% block site_header_unwrapped %}{% endblock %}
 
     {% block site_nav %}{% endblock %}
+
     {% block site_header %}
     {% endblock %}
-
-
 
     <main>
       {% block pre_content %}{% endblock %}
@@ -77,7 +76,7 @@
     </main>
 
     {% block site_footer %}
-      {% include 'includes/base/shared-footer.html' %}
+        {% include 'includes/base/footer.html' %}
     {% endblock %}
 
     {% block additional_site_js %}{% endblock %}
