--- a/sites/common/includes/base/shared-footer.html
+++ b/sites/common/includes/base/shared-footer.html
@@ -4,14 +4,14 @@
 
 <footer id="tb-footer">
   <div id="site-nav">
-    <a id="nav-link-home" href="#">
+    <a id="nav-link-home" href="{{ url('tbpro.home') }}">
       {{ svg('tbpro/logo-tbpro') }}
     </a>
     <div class="site-nav-links">
-      <a href="#">Home</a>
-      <a href="#">Thundermail</a>
-      <a href="#">Appointment</a>
-      <a href="#">Send</a>
+      <a href="{{ url('tbpro.home') }}">Home</a>
+      <a href="{{ url('tbpro.thundermail') }}">Thundermail</a>
+      <a href="{{ url('tbpro.appointment') }}">Appointment</a>
+      <a href="{{ url('tbpro.send') }}">Send</a>
     </div>
   </div>
   <div id="moz-nav">
