Remove old/duplicate LESS files, update references

--- a/assets/less/base-style.less
+++ b/assets/less/base-style.less
@@ -45,5 +45,6 @@
 
 // Components shared with tb.pro
 @import "./common/space.less";
+@import "./common/fonts.less";
 @import "./common/calamity-bar.less";
 @import "./common/shared-footer.less";
