--- a/assets/less/tbpro/base.less
+++ b/assets/less/tbpro/base.less
@@ -1,6 +1,6 @@
 // Base
 @import "variables.less";
-@import "fonts.less";
+@import "../common/fonts.less";
 @import "../common/space.less";
 
 @import "colours.less";
