drop font weight, use inline svg for hover, min-width card body p

--- a/assets/less/tbpro-style.less
+++ b/assets/less/tbpro-style.less
@@ -201,6 +201,7 @@ section#features {
                 text-align: left;
                 @media (min-width: @md) {
                     .web-body-default();
+                    min-width: 311px;
                 }
             }
         }
