change lower-gradient to single color

--- a/assets/less/tbpro/base.less
+++ b/assets/less/tbpro/base.less
@@ -274,5 +274,5 @@ body {
 }
 
 .lower-gradient {
-    background-image: linear-gradient(355deg, #1A202C 123%, #262d3b -202%);
+    background-color: #222D3C;
 }
