--- a/assets/less/tbpro/base.less
+++ b/assets/less/tbpro/base.less
@@ -1,6 +1,6 @@
 // Base
 @import "variables.less";
-@import "fonts.less";
+@import "../common/fonts.less";
 @import "../common/space.less";
 
 @import "colours.less";
@@ -274,5 +274,5 @@ body {
 }
 
 .lower-gradient {
-    background-image: linear-gradient(355deg, #1A202C 123%, #262d3b -202%);
+    background-color: #222D3C;
 }
