--- a/assets/less/tbpro/base.less
+++ b/assets/less/tbpro/base.less
@@ -1,5 +1,9 @@
 // Base
 @import "variables.less";
+@import "breakpoints.less";
+@import "images.less";
+@import "variables.less";
+
 @import "../common/fonts.less";
 @import "../common/space.less";
 
@@ -14,7 +18,6 @@
 // ------------------------------------------------------------
 *, *::before, *::after { box-sizing: border-box; }
 
-
 :root {
     --font-content: 'Inter', sans-serif;
     --font-titles: 'Metropolis', sans-serif;
@@ -24,31 +27,6 @@
 body {
     color: var(--color-text-base);
     font-family: var(--font-content);
-}
-
-
-// Breakpoints (assumes 16px root)
-@xs:     23.4375rem;   // 375px
-@sm:     37.5rem;      // 600px
-@md:     56.25rem;     // 900px;
-@lg:     80rem;        // 1280px
-
-// mixins
-.mixin-background-image(@base-path) {
-    // Fallback for older browsers.
-    background-image: url('@{base-path}.png');
-
-    // For browsers that support modern formats.
-    background-image: -webkit-image-set(
-        url('@{base-path}.avif') type('image/avif'),
-        url('@{base-path}.webp') type('image/webp'),
-        url('@{base-path}.png')
-    );
-    background-image: image-set(
-        url('@{base-path}.avif') type('image/avif'),
-        url('@{base-path}.webp') type('image/webp'),
-        url('@{base-path}.png')
-    );
 }
 
 // Constrain the common containers to the largest breakpoint.
