--- a/assets/less/tbpro-style.less
+++ b/assets/less/tbpro-style.less
@@ -34,7 +34,7 @@ header#masthead {
     }
 
     .hero-image {
-
+        .mixin-background-image('/media/img/thunderbird/tbpro/orb-graphic');
         aspect-ratio: 1.4/1;
         background-position: top center;
         background-repeat: no-repeat;
@@ -50,13 +50,6 @@ header#masthead {
             margin-top: @space-36;
             margin: 0;
             max-width: unset;
-        }
-    }
-
-    .hero-image.tbpro {
-        .mixin-background-image('/media/img/thunderbird/tbpro/orb-graphic');
-        @media (min-width: @md) {
-            .mixin-background-image('/media/img/thunderbird/tbpro/orb-graphic-high-res');
         }
     }
 
@@ -100,14 +93,6 @@ header#masthead {
             grid-column: 1;
             grid-row: 4;
             max-width: 180px;
-        }
-
-        & img {
-            margin-left: @space-3;
-        }
-
-        &:hover {
-            text-decoration: none;
         }
     }
 }
@@ -285,6 +270,91 @@ section#features {
             }
         }
     }
+}
+
+// 8px/0.5rem between header and p
+// 24px/1.5rem between p and first card
+// 16px/1rem between cards
+// 36px/2.25rem from last overview card and Made for You header
+section#overview {
+    background: #fff;
+    header {
+        .brand-headline-h1-sm();
+        color: var(--header-color);
+        margin: 0;
+        text-align: center;
+
+        @media (min-width: @md) {
+            .brand-headline-h1-lg();
+        }
+    }
+
+    p {
+        .mixin-font-styles(
+            @family-inter,
+            normal,
+            0.9375rem,
+            1.32
+        );
+        color: #4c4d58;
+
+        @media (min-width: @lg) {
+            margin-bottom: 2.25rem;
+            margin-inline: auto;
+            max-width: 711px;
+            text-align: center;
+        }
+    }
+
+    .overview-card-container {
+        @media (min-width: @lg) {
+            display: grid;
+            gap: @space-12;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
+
+            .overview-card:first-child {
+                grid-row: 1 / -1;
+                height: 100%;
+            }
+        }
+
+        .overview-card {
+            border-radius: 1.5rem;
+            padding-block: 1.5rem;
+
+            @media (min-width: @lg) {
+                min-width: 594px;
+                padding-block: 0;
+            }
+
+            &+.overview-card {
+                margin-top: 1rem;
+                @media (min-width: @lg) {
+                    margin-top: 0;
+                }
+            }
+
+            header {
+                .headings-h3-small();
+                padding-inline: 1.25rem;
+                text-align: left;
+
+                @media (min-width: @lg) {
+                    .brand-headline-h3-lrg();
+                }
+            }
+
+            p {
+                margin: 0;
+                padding-inline: 1.25rem;
+                text-align: left;
+            }
+        }
+    }
+
+
+
 }
 
 section#reasons {
