--- a/sites/tb.pro/includes/base/page.html
+++ b/sites/tb.pro/includes/base/page.html
@@ -59,27 +59,26 @@
       {% block masthead %} {% endblock %}
     </header>
 
-    <section id="features" class="primary-block">
-      {% block features %}{% endblock %}
-    </section>
+    {% block features %}{% endblock %}
+
   </div>
+
+  {% block overview %}
+    {# Individual product overviews. #}
+  {% endblock %}
 
   <section id="reasons" class="primary-block">
     {% block reasons %}{% endblock %}
   </section>
-  <div class="testimonials-background">
-    <section id="testimonials">
-      {% block testimonials %}{% endblock %}
-    </section>
-  </div>
+
+  {% block testimonials %}
+  {% endblock %}
 
   <div class="lower-gradient">
     <section id="details" class="primary-block">
       {% block details %}{% endblock %}
     </section>
 
-    <section id="faq" class="primary-block">
-      {% block faq %}{% endblock %}
-    </section>
+    {% block faq %}{% endblock %}
   </div>
 {% endblock %}
