Add missing .less files, use png for bento BGs on thundermail

--- a/assets/less/tbpro/product/thundermail.less
+++ b/assets/less/tbpro/product/thundermail.less
@@ -55,7 +55,7 @@ section#overview {
         }
 
         .overview-card-1 {
-            background-image: url('/media/svg/tbpro/thundermail-bento-main.svg');
+            background-image: url('/media/img/thunderbird/tbpro/thundermail-bento-main.png');
             overflow: hidden;
 
             @media (min-width: @lg) {
@@ -96,7 +96,7 @@ section#overview {
         }
 
         .overview-card-2 {
-            background-image: url('/media/svg/tbpro/thundermail-bento-right-top.svg');
+            background-image: url('/media/img/thunderbird/tbpro/thundermail-bento-right-top.png');
 
             @media (min-width: @lg) {
                 display: grid;
@@ -144,7 +144,7 @@ section#overview {
             }
         }
         .overview-card-3 {
-            background-image: url('/media/svg/tbpro/thundermail-bento-right-bottom.svg');
+            background-image: url('/media/img/thunderbird/tbpro/thundermail-bento-right-bottom.png');
             padding-bottom: 0;
             overflow: hidden;
 
