Fixup footer RTL headings

--- a/assets/less/new/layout.less
+++ b/assets/less/new/layout.less
@@ -195,7 +195,7 @@ header {
     h4 {
       margin-top: 0;
       margin-bottom: 1rem;
-      padding-left: 40px;
+      padding-inline-start: 40px;
     }
 
     .home {
