Align appeal/whatsnew footers

--- a/assets/less/appeal-128.less
+++ b/assets/less/appeal-128.less
@@ -365,17 +365,9 @@ main {
   text-decoration-color: var(--color-purple-50);
 }
 
-#footer .mzla {
-  display: grid;
-  place-items: center;
-  gap: 15px;
-  text-align: center;
-  max-inline-size: 75ch;
-}
-
-#footer .mozilla-logo {
+#footer .mozilla-logo svg {
   --accent: white;
-  max-width: 200px;
+  max-width: 10rem;
 }
 
 #footer .site-links,
