--- a/assets/less/new/components/appeal-footer.less
+++ b/assets/less/new/components/appeal-footer.less
@@ -34,22 +34,9 @@
   text-decoration-color: var(--color-purple-50);
 }
 
-#footer .mzla {
-  display: grid;
-  place-items: center;
-  gap: 0.9375rem;
-  text-align: center;
-  max-inline-size: 75ch;
-}
-
-#footer .mozilla-logo {
+#footer .mozilla-logo svg {
   --accent: white;
-  width: 7.6875rem;
-  max-width: 100%;
-  svg {
-    width: 100%;
-    height: 100%;
-  }
+  max-width: 10rem;
 }
 
 #footer .site-links,
