--- a/assets/less/tbpro/product/thundermail.less
+++ b/assets/less/tbpro/product/thundermail.less
@@ -13,6 +13,11 @@ header#masthead {
         text-align: center;
     }
 
+    h1 {
+        white-space: wrap;
+        max-width: 80%;
+    }
+
     p {
         max-width: 400px;
     }
