Move settings.SITE_ANNOUNCEMENT check to announcement.html

--- a/sites/www.thunderbird.net/includes/announcement.html
+++ b/sites/www.thunderbird.net/includes/announcement.html
@@ -1,4 +1,5 @@
 {# Adjust the css variables in announcements.less if text is cut-off or wraps weirdly. #}
+{% if settings.SITE_ANNOUNCEMENT %}
 <div class="site-announcement">
   <a class="strong" href="https://blog.thunderbird.net/2025/02/thunderbird-desktop-release-channel-default-download/" target="_blank">
     {% trans trimmed %}
@@ -6,3 +7,4 @@
     {% endtrans %}
   </a>
 </div>
+{% endif %}
